# sql2text-gemma-3-270m

./: .gitignore  README.md  dataset_eval.py  main.py  pyproject.toml  utils.py
